--- a/css/loading.css
+++ b/css/loading.css
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Romanesco&display=swap');
 
-'
 body {
+    font-family: "Romanesco", cursive;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -8,3 +9,6 @@ body {
     margin: 0;
 }
 
+.loading-text{
+    font-size
+}
