--- a/css/loading.css
+++ b/css/loading.css
@@ -10,5 +10,16 @@ body {
 }
 
 .loading-text{
-    font-size: 50px:
+    font-size: 50px;
+}
+
+
+
+
+.bg {
+    height: 100vh;
+    width: 100vw;
+    background-color: green;
+    position: absolute;
+
 }
