--- a/css/loading.css
+++ b/css/loading.css
@@ -12,6 +12,7 @@ body {
 .loading-text{
     font-size: 50px;
     color: white;
+    opacity: 1;
 }
 
 
@@ -26,6 +27,7 @@ body {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    filter: blur(0px);
 
 
 }
