--- a/css/index.css
+++ b/css/index.css
@@ -2,5 +2,5 @@
 
 body {
     font-family: "Raleway", sans-serif;
-    background-color: rgb(241, 178, 99)
+    background-color: rgb(241, 178, 99);
 }
