--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
 
 * {
     box-sizing: border-box;
@@ -9,4 +9,5 @@
 body {
     color: #222;
     padding-bottom: 50px;
+    font-family: "Libre Baskerville", serif;
 }
