--- a/css/navigation.css
+++ b/css/navigation.css
@@ -11,3 +11,8 @@ body {
     padding-bottom: 50px;
     font-family: "Libre Baskerville", serif;
 }
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
