--- a/css/navigation.css
+++ b/css/navigation.css
@@ -19,4 +19,14 @@ body {
 
 .hero {
     background-image: url(images/PCity.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom center;
+    height: 100vh;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: relative;
 }
