Tue, Mar 5, 2024, 9:52 AM -08:00

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -29,4 +29,9 @@ body {
     align-items: center;
     text-align: center;
     position: relative;
+    margin-bottom: 20px;
+}
+
+.hero::before {
+    content: 'HEL';
 }
