Wed, Mar 6, 2024, 10:30 AM -08:00

--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -2,7 +2,7 @@
 
 :root {
     --primary-color: rgb(48,51,107);
-    --secondary-color: rgb()
+    --secondary-color: #9b87a8;
 }
 * {
     box-sizing: border-box
