--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -3,7 +3,9 @@
 :root {
     --primary-color: rgb(48,51,107);
     --secondary-color: #9b87a8;
+    --modal-duration:
 }
+
 * {
     box-sizing: border-box
 }
@@ -11,5 +13,14 @@
 body {
     font-family: "Lato", sans-serif;
     margin: 0;
+}
 
+nav {
+    background-color: var(--primary-color);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 200px;
+    height: 100%;
+    border-right: 2px solid rgba(200, 200, 200, .1)
 }
