--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -22,5 +22,8 @@ nav {
     left: 0;
     width: 200px;
     height: 100%;
-    border-right: 2px solid rgba(200, 200, 200, .1)
+    border-right: 2px solid rgba(200, 200, 200, .1);'
+    z-index: 100;
+    color: white;
+    transform: translatex(-100%);
 }
