Fri, Mar 8, 2024, 9:56 AM -08:00

--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -27,3 +27,8 @@ nav {
     color: white;
     /* transform: translatex(-100%); */
 }
+
+nav .logo {
+    padding: 30px 0;
+    text-align: center;
+}
