--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -22,10 +22,10 @@ nav {
     left: 0;
     width: 200px;
     height: 100%;
-    border-right: 2px solid rgba(200, 200, 200, .1);'
+    border-right: 2px solid rgba(200, 200, 200, .1);
     z-index: 100;
     color: white;
-    /* transform: translatex(-100%); */
+    transform: translatex(-100%);
 }
 
 nav .logo {
@@ -37,4 +37,28 @@ nav .logo img {
     height: 75px;
     width: 75px;
     border-radius: 50%;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+}
+
+nav ul li a:hover {
+    text-decoration: underline;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+nav ul li {
+    padding: 19px;
+    border-bottom: 2px solid rgba(200, 200, 200, .1);
+}
+
+nav ul li:nth-of-type(1) {
+    border-top: 2px solid rgba(200, 200, 200, .1);
 }
