--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -115,5 +115,12 @@ button, input[type='submit'] {
     left: 0;
     right: 0;
     background-color: rgba(0, 0, 0, 0.6);
-    display: none;
+    /* display: none; */
+}
+
+.modal {
+    background-color:white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
 }
