--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -124,4 +124,6 @@ button, input[type='submit'] {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 400px;
+    max-width: 100%;
 }
