Mon, Mar 11, 2024, 9:39 AM -07:00

--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -133,4 +133,6 @@ button, input[type='submit'] {
 .model-header {
     background-color: var(--primary-color);
     color: white;
+    padding: 15px;
 }
+
