--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -123,6 +123,9 @@ button, input[type='submit'] {
     display: none;
 }
 
+.modal-container.show-modal {
+    display: block;
+}
 .modal {
     background-color:white;
     position: absolute;
