--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -135,7 +135,18 @@ button, input[type='submit'] {
     width: 400px;
     max-width: 100%;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba( 0,0,0,0.3)
+    box-shadow: 0 0 10px rgba( 0,0,0,0.3);
+    animation-name: modalopen;
+    animation-duration: var(--modal-duration);
+}
+
+@keyframes modalopen {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 .modal-header {
