Mon, Mar 11, 2024, 10:03 AM -07:00

--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -3,11 +3,11 @@
 :root {
     --primary-color: rgb(48,51,107);
     --secondary-color: #9b87a8;
-    --modal-duration:
+    --modal-duration: 42s;
 }
 
 * {
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 
 body {
