--- a/css/expanding.css
+++ b/css/expanding.css
@@ -20,6 +20,9 @@ body{
 }
 
 .panel {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     height: 80vh;
     border-radius: 50px;
     color: white;
