--- a/css/test.css
+++ b/css/test.css
@@ -6,15 +6,11 @@ body {
 }
 
 .panel {
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
     height: 80vh;
     border-radius: 50px;
     color: black;
     cursor: pointer;
     flex: 0.5;
     margin: 10px;
-    position: relative;
-    transition: flex .5s ease-in;
+    position: center;
 }
