--- a/css/test.css
+++ b/css/test.css
@@ -7,17 +7,20 @@ body {
     font-family: "Raleway", sans-serif;
     background-color: rgb(255, 244, 231);
 }
+
 .container {
     height: 40vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0;
+    margin: 20px;
 }
 
 
 .panel {
-    border-radius: 200px;
+    align-items: center;
+    border-radius: 30px;
+    background-color: aquamarine;
 }
 
 .panel h3 {
