--- a/css/test.css
+++ b/css/test.css
@@ -8,6 +8,9 @@ body {
     background-color: rgb(255, 244, 231);
 }
 
+h1 {
+    text-align: center;
+}
 .container {
     height: 40vh;
     display: flex;
@@ -18,16 +21,73 @@ body {
 
 
 .panel {
-    align-items: center;
-    border-radius: 30px;
-    background-color: aquamarine;
-}
-
-.panel h3 {
-    align-items: center;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 40vh;
+    width: 30vh;
+    border-radius: 50px;
+    background-color: orange;
     color: black;
     cursor: pointer;
+    margin: 10px;
+    position: relative;
+}
+
+h3 {
+    color: black;
+    cursor: pointer;
+    position: relative;
     margin: 0;
     right: 60px;
-    width: 150px
+    width: 150px;
+    transition: opactiy .2s ease-out;
+}
+h3.active {
+    opacity: 0;
+    transition: opacity .2s ease-in;
+
+}
+
+a.button {
+    padding: 1px 6px;
+    border: 1px outset buttonborder;
+    border-radius: 3px;
+    color: buttontext;
+    background-color: buttonface;
+    text-decoration: none;
+}
+
+nav {
+    background-color: red;
+    position: fixed;
+    top: 0;
+    left: 100px;
+    width: 200px;
+    height: ;
+    border-right: 2px solid rgba(200, 200, 200, .1);
+    z-index: 100;
+    color: white;
+
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+}
+
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+nav ul li {
+    padding: 19px;
+    border-bottom: 2px solid rgba(200, 200, 200, .1);
+}
+
+nav ul li:nth-of-type(1) {
+    border-top: 2px solid rgba(200, 200, 200, .1);
 }
