--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,124 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: "Raleway", sans-serif;
     background-color: rgb(255, 244, 231);
 }
+
+h1 {
+    text-align: center;
+}
+.container {
+    height: 40vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+}
+
+
+.panel {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 40vh;
+    width: 30vh;
+    border-radius: 50px;
+    background-color: orange;
+    color: black;
+    cursor: pointer;
+    margin: 10px;
+    position: relative;
+}
+
+h3 {
+    color: black;
+    cursor: pointer;
+    position: relative;
+    margin: 0;
+    right: 60px;
+    width: 150px;
+    transition: opactiy .2s ease-out;
+}
+
+h3.active {
+    opacity: 0;
+    transition: opacity .2s ease-in;
+
+}
+
+a.button  {
+    padding: 1px 6px;
+    border: 1px outset buttonborder;
+    border-radius: 3px;
+    color: buttontext;
+    background-color: buttonface;
+    text-decoration: none;
+}
+
+.bar .nav {
+    background-color: CadetBlue;
+    position: fixed;
+    top: 60px;
+    left: 10px;
+    width: 200px;
+    height: ;
+    border-right: 2px solid rgba(200, 200, 200, .1);
+    z-index: 100;
+    color: white;
+
+}
+
+.bar .nav.active {
+    background-color: CadetBlue;
+    position: fixed;
+    top: 60px;
+    left: 1000000px;
+    width: 200px;
+    height: ;
+    border-right: 2px solid rgba(200, 200, 200, .1);
+    z-index: 100;
+    color: white;
+    opacity: 1;
+}
+
+.bar .btn {
+    background-color: Aquamarine;
+    font-size: 20px;
+    position: absolute;
+    top: 0px;
+    left: 156px;
+    padding: 10px;
+    margin: 1rem;
+    border: none;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+}
+
+.bar .btn.active {
+    rotate: 180deg;
+}
+nav ul li a {
+    color: white;
+    text-decoration: none;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+nav ul li {
+    padding: 19px;
+    border-bottom: 2px solid rgba(200, 200, 200, .1);
+}
+
+nav ul li:nth-of-type(1) {
+    border-top: 2px solid rgba(200, 200, 200, .1);
+}
+
