--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: "Raleway", sans-serif;
-    background-color: rgb(255, 244, 231);
+    background-color: Thistle;
 }
 
 h1 {
